partial get comments